# ecotrack21

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  package.json  vite.config.js
github-backup/workflows/: ci.yml
pkg/: README.md  carbon_engine_bg.wasm  package.json
scripts/: dev.mjs
server/: appServer.mjs  appServer.test.ts  openRouterProxy.mjs  server.mjs
src/: App.tsx  index.css  main.tsx  sw.ts  types.ts
src-rs/: lib.rs
src/components/: ActivityFeed.tsx  AttributionPanel.tsx  CategoryIcon.tsx  CommandBar.tsx  DataStrip.tsx  ErrorBoundary.tsx  Layout.tsx  OnboardingModal.tsx
src/constants/: categoryColors.ts  demoData.ts
src/hooks/: useAttributionNarrative.ts  useEnvironmentalData.ts  usePersistentHistory.ts
src/layers/ai/: openRouterClient.test.ts  openRouterClient.ts  useCarbonIntelligence.ts
src/layers/ui/: CO2Clock.tsx  Scope3Graph.tsx
src/tests/: app.test.tsx
src/utils/: date.test.ts  date.ts  evaluateProgress.test.ts  progress.ts  storage.test.ts  storage.ts  supplyChain.test.ts  supplyChain.ts
