[package]
name = "carbon-engine"
version = "0.1.0"
edition = "2021"
description = "Deterministic WebAssembly carbon-emissions calculation engine for EcoTrack"
license = "MIT"
readme = "pkg/README.md"

[lib]
crate-type = ["cdylib"]
path = "src-rs/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
